--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,75 +1,72 @@
 name: Django-app workflow
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
 
     steps:
+      # для клонирования репозитория применён предустановленный action
     - uses: actions/checkout@v2
-    - name: Set up Python 
+    - name: Set up Python
+      # для установки Python-окружения
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
 
     - name: Install dependencies
-      run: | 
+      run: |
         # обновление pip
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
-        pip install -r requirements.txt 
-
+        pip install -r requirements.txt
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
+        # перейти в папку, содержащую manage.py - <корневая_папка>/<папка_проекта>/manage.py
         cd infra_project/
         # запустить написанные разработчиком тесты
         python manage.py test
-        build_and_push_to_docker_hub:
-
-    - name: Push Docker image to Docker Hub
-      runs-on: ubuntu-latest
-      needs: tests
-      steps:
-        - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
-          uses: actions/checkout@v2 
-        - name: Set up Docker Buildx
-        # Вызов сборщика контейнеров docker
-         uses: docker/setup-buildx-action@v1 
-        - name: Login to Docker 
-        # Запуск скрипта авторизации на Docker Hub
-        uses: docker/login-action@v1 
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 # Проверяет доступность репозитория DockerHub для workflow
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 # Вызывает сборщик контейнеров docker
+      - name: Login to Docker
+        uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push to Docker Hub
-        # Пуш образа в Docker Hub 
-        uses: docker/build-push-action@v2 
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub
         with:
           push: true
           tags: deniskirichenko/infra_actions:latest
 
-    deploy:
-      runs-on: ubuntu-latest
-      needs: build_and_push_to_docker_hub
-      steps:
-        - name: executing remote ssh commands to deploy
-          uses: appleboy/ssh-action@master
-          with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USER }}
-            key: ${{ secrets.SSH_KEY }}
-            passphrase: ${{ secrets.PASSPHRASE }}
-            script: |
-              # Выполняет pull образа с DockerHub
-              sudo docker pull deniskirichenko/infra_actions
-              #остановка всех контейнеров
-              sudo docker stop $(sudo docker ps -a -q)
-              sudo docker run --rm -d -p 5000:5000 deniskirichenko/infra_actions
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+          script: |
+            # Выполняет pull образа с DockerHub
+            sudo docker pull deniskirichenko/infra_actions
+            #остановка всех контейнеров
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker run --rm -d -p 5000:5000 deniskirichenko/infra_actions
