--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2 # Проверяет доступность репозитория DockerHub для workflow
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 # Выsзывает сборщик контейнеров docker
+        uses: docker/setup-buildx-action@v1 # Вызывает сборщик контейнеров docker
       - name: Login to Docker
         uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
         with:
